fix(review): build the clear directive from the configured bot logins (#679)
The resolved directive pattern hardcoded @thrillhousebot, so on an install
whose GitHub App runs under a different login the conversation clear hatch
was silently dead. The pattern is now derived from github.bot-logins via
BotIdentity.mentionNames() (each name Pattern.quote'd), compiled once per
configuration and cached; the interrogative guard and case-insensitivity
are unchanged, as is every default-config behavior. The no-locator and
unauthorized acknowledgements and the cleared-finding note now spell the
directive with the install's own primary mention name.

Closes #679