@@ -17,6 +17,7 @@ package dev.thiagogonzaga.thrillhousebot.config;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
@@ -43,14 +44,19 @@ public record BotIdentity(Set<String> logins) {
   public static final List<String> DEFAULT_LOGINS =
       List.of("thrillhousebot[bot]", "thrillhouse-bot[bot]");
 
+  /** The suffix GitHub appends to an App's slug to form its bot login. */
+  private static final String BOT_LOGIN_SUFFIX = "[bot]";
+
   /**
    * Normalizes the supplied logins (trimmed, lower-cased, blanks dropped). The stored set is never
    * empty: an empty set would make {@link #matches} always false and let the bot answer its own
-   * comments in an infinite loop, so it falls back to {@link #DEFAULT_LOGINS}.
+   * comments in an infinite loop, so it falls back to {@link #DEFAULT_LOGINS}. Configured order is
+   * preserved so {@link #primaryMention} is deterministic.
    */
   public BotIdentity {
     var normalized = normalize(logins);
-    logins = Set.copyOf(normalized.isEmpty() ? normalize(DEFAULT_LOGINS) : normalized);
+    logins =
+        Collections.unmodifiableSet(normalized.isEmpty() ? normalize(DEFAULT_LOGINS) : normalized);
   }
 
   /** Builds an identity from a configured list; a {@code null} list yields the defaults. */
@@ -69,10 +75,38 @@ public record BotIdentity(Set<String> logins) {
     return login != null && logins.contains(login.toLowerCase(Locale.ROOT));
   }
 
+  /**
+   * The names a maintainer types to {@code @}-mention this bot, in login order. A GitHub App whose
+   * login is {@code <app-slug>[bot]} is mentioned as {@code @<app-slug>} — the {@code [bot]} suffix
+   * is not part of the mention — so it is stripped here; a login without the suffix (a PAT-driven
+   * bot account) mentions as-is. Never empty: a pathological login that is nothing but the suffix
+   * falls back to the raw logins rather than yielding a name no comment can contain.
+   */
+  public List<String> mentionNames() {
+    var names =
+        logins.stream().map(BotIdentity::mentionName).filter(s -> !s.isBlank()).distinct().toList();
+    return names.isEmpty() ? List.copyOf(logins) : names;
+  }
+
+  /**
+   * The mention name rendered in user-facing text that spells out the directive form — the first
+   * configured login's, so a custom install's docs and acknowledgements name the bot the install
+   * actually answers to.
+   */
+  public String primaryMention() {
+    return mentionNames().get(0);
+  }
+
+  private static String mentionName(String login) {
+    return login.endsWith(BOT_LOGIN_SUFFIX)
+        ? login.substring(0, login.length() - BOT_LOGIN_SUFFIX.length())
+        : login;
+  }
+
   private static Set<String> normalize(Collection<String> logins) {
     return logins.stream()
         .filter(s -> s != null && !s.isBlank())
         .map(s -> s.strip().toLowerCase(Locale.ROOT))
-        .collect(Collectors.toSet());
+        .collect(Collectors.toCollection(LinkedHashSet::new));
   }
 }
